# polymarket-hft

./: .env.example  .gitignore  Dockerfile  PROJECT_BRIEF.md  README.md  deploy_aws.sh  docker-compose.yml  main.py  requirements 2.txt  requirements.txt  run_live_alpha.sh  run_shadow.sh  test_discord.py
config/: __init__ 2.py  __init__.py  alpha_settings.py  settings 2.py  settings.py
logs/: shadow_report.txt  shadow_trades.csv
rust_core/: Cargo 2.toml  Cargo.toml
rust_core/src/: graph 2.rs  graph.rs  lib 2.rs  lib 3.rs  lib.rs  negrisk 2.rs  negrisk.rs  orderbook 2.rs  orderbook.rs  signer 2.rs  signer.rs  vulture 2.rs  vulture 3.rs  vulture.rs
strategy_layer/: __init__.py  executors.py  rate_limiter.py  risk_manager.py  shadow_engine.py
strategy_layer/bots/: __init__.py  correlation_scanner.py  resolution_sniper.py  semantic_sentinel.py
strategy_layer/utils/: __init__.py  clob_client.py  orderbook_client.py
tests/: __init__.py  audit_suite.py  test_safety.py
utils/: __init__.py  notifier.py  startup_check.py
